adds accordion card to household

--- a/public/indexCuts.html
+++ b/public/indexCuts.html
@@ -1,7 +1,13 @@
 
 
 <!-- image credit -->
-<!-- Photo by Plush Design Studio on Unsplash -->
+<!-- Photo by Plush Design Studio on Unsplash -- home page
+Photo by Jan Kahánek on Unsplash -- pencil and paper
+Photo by Andrew Neel on Unsplash -- coffee and computer
+Photo by Stefano Alemani on Unsplash -- fruit stand
+Photo by Lukas Budimaier on Unsplash -- assorted produce
+Photo by John-Mark Smith on Unsplash -- flowers -->
+<!-- Photo by Evie Calder on Unsplash -- bags on table -->
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" role="navigation">
